force-app/main/default/objects/Sync_Run__c/fields/Cases_Closed__c.field-meta.xml
<CustomField>
    <fullName>Cases_Closed__c</fullName>
    <description>Delinquency Cases auto-closed by this run because the balance cleared in Yardi (FSD 5.9.6 step 6).</description>
    <inlineHelpText>Cases this run closed because the balance cleared.</inlineHelpText>
    <label>Cases Closed</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>