force-app/main/default/objects/Sync_Run__c/fields/Cases_Escalated__c.field-meta.xml
<CustomField>
    <fullName>Cases_Escalated__c</fullName>
    <description>Delinquency Cases whose escalation level this run raised (FSD 5.9.6 step 5). Must be zero on any halted run - that is the whole point of the halt.</description>
    <inlineHelpText>Cases this run escalated.</inlineHelpText>
    <label>Cases Escalated</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>