force-app/main/default/objects/Sync_Run__c/fields/Cases_Opened__c.field-meta.xml
<CustomField>
    <fullName>Cases_Opened__c</fullName>
    <description>Delinquency Cases created by this run (FSD 5.9.6 step 4). Must be zero on any halted run.</description>
    <inlineHelpText>New Delinquency Cases this run opened.</inlineHelpText>
    <label>Cases Opened</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>