force-app/main/default/objects/Sync_Run__c/fields/Finished_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Finished_DateTime__c</fullName>
    <description>When the run finished, whether it completed, halted or failed. Blank on a run that died without a finalizer, which is itself a signal.</description>
    <inlineHelpText>When this run finished. Blank means it never got that far.</inlineHelpText>
    <label>Finished</label>
    <type>DateTime</type>
</CustomField>