force-app/main/default/objects/Sync_Run__c/fields/Halt_Detail__c.field-meta.xml
<CustomField>
    <fullName>Halt_Detail__c</fullName>
    <description>Free-text detail behind the halt, and the capture point for partial-upsert failures. The upsert runs with allOrNone = false, which makes partial failure SILENT - the failed-row list must land here rather than being discarded.</description>
    <inlineHelpText>Detail behind the halt, including any rows that failed to upsert.</inlineHelpText>
    <label>Halt Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>