force-app/main/default/objects/Sync_Run__c/fields/Halt_Reason__c.field-meta.xml
<CustomField>
    <fullName>Halt_Reason__c</fullName>
    <description>Why the health check stopped the run. This is the ASSERTABLE value in the FSD 5.9.6 step 2 tests - a test should assert this enum plus Lifecycle_Ran__c, not merely that no Cases appeared, because "no Cases" is also what a silently broken job produces.</description>
    <inlineHelpText>Why this run stopped. None means it was not halted.</inlineHelpText>
    <label>Halt Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Disabled</fullName>
            </value>
            <value>
                <fullName>Config Missing</fullName>
            </value>
            <value>
                <fullName>Stale Feed</fullName>
            </value>
            <value>
                <fullName>Row Count Below Minimum</fullName>
            </value>
            <value>
                <fullName>Row Count Change Exceeded</fullName>
            </value>
            <value>
                <fullName>Callout Failure</fullName>
            </value>
            <value>
                <fullName>Parse Failure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>