force-app/main/default/objects/Sync_Run__c/fields/Lifecycle_Ran__c.field-meta.xml
<CustomField>
    <fullName>Lifecycle_Ran__c</fullName>
    <defaultValue>false</defaultValue>
    <description>THE SINGLE ASSERTABLE BOOLEAN for FSD 5.9.6’s first safety rule. False whenever the health check halted the run, and when it is false no Case was created, refreshed, escalated or closed. Every halt test asserts on this rather than on downstream counts.</description>
    <inlineHelpText>Ticked only if the Case lifecycle was allowed to run. Unticked means the health check stopped it.</inlineHelpText>
    <label>Lifecycle Ran</label>
    <type>Checkbox</type>
</CustomField>