force-app/main/default/objects/Sync_Run__c/fields/Provider_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Provider_Class_Name__c</fullName>
    <description>The Apex class that actually ran, as resolved at runtime from the config. Recorded separately from Source__c because the provider is selected by a config STRING: if the configured class is renamed or deleted there is no compile error, and this field is the only evidence of what really executed.</description>
    <inlineHelpText>The provider class that ran. Compare against the configured value if a run behaves unexpectedly.</inlineHelpText>
    <label>Provider Class Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>