force-app/main/default/objects/Sync_Run__c/fields/Row_Count__c.field-meta.xml
<CustomField>
    <fullName>Row_Count__c</fullName>
    <description>Rows the provider returned. Compared against the configured minimum and against the previous completed run to detect a feed that collapsed or doubled.</description>
    <inlineHelpText>How many rows the feed returned.</inlineHelpText>
    <label>Row Count</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>