force-app/main/default/objects/Sync_Run__c/fields/Rows_Failed__c.field-meta.xml
<CustomField>
    <fullName>Rows_Failed__c</fullName>
    <description>Rows the upsert rejected. Non-zero here with Status Completed is the signature of a silent partial failure.</description>
    <inlineHelpText>How many rows the mirror rejected.</inlineHelpText>
    <label>Rows Failed</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>