force-app/main/default/objects/Sync_Run__c/fields/Rows_Upserted__c.field-meta.xml
<CustomField>
    <fullName>Rows_Upserted__c</fullName>
    <description>Rows successfully written to the mirror. A gap between this and Row Count means partial failure - see Halt Detail.</description>
    <inlineHelpText>How many rows made it into the mirror.</inlineHelpText>
    <label>Rows Upserted</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>