force-app/main/default/objects/Sync_Run__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Which feed provider produced this run. Stub reads a bundled JSON fixture and makes no callout; ASB is the live pull. Recording it means a run can never be mistaken for live data after the fact.</description>
    <inlineHelpText>Where this run got its data. Stub means a test fixture, not Yardi.</inlineHelpText>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stub</fullName>
                <default>true</default>
                <label>Stub</label>
            </value>
            <value>
                <fullName>ASB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>