force-app/main/default/objects/Sync_Run__c/fields/Started_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Started_DateTime__c</fullName>
    <description>When the run began in Salesforce. Used for duration and for ordering runs - NOT for staleness, which is measured against Feed_As_Of_DateTime__c.</description>
    <inlineHelpText>When this run started.</inlineHelpText>
    <label>Started</label>
    <type>DateTime</type>
</CustomField>