force-app/main/default/objects/Sync_Run__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Current state of the run. Halted means the health check refused to proceed on suspect data (an intended outcome); Failed means the run errored.</description>
    <inlineHelpText>Halted is a safety stop, not an error. Failed is an error.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Running</fullName>
                <default>true</default>
                <label>Running</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Halted</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>