force-app/main/default/objects/Sync_Run__c/listViews/All_Sync_Runs.listView-meta.xml
<ListView>
    <fullName>All_Sync_Runs</fullName>
    <columns>NAME</columns>
    <columns>Started_DateTime__c</columns>
    <columns>Finished_DateTime__c</columns>
    <columns>Source__c</columns>
    <columns>Feed_As_Of_DateTime__c</columns>
    <columns>Row_Count__c</columns>
    <columns>Rows_Upserted__c</columns>
    <columns>Rows_Failed__c</columns>
    <columns>Status__c</columns>
    <columns>Halt_Reason__c</columns>
    <columns>Lifecycle_Ran__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Sync Runs</label>
</ListView>